# Kalavu

./: .gitignore  CLAUDE.md  KALAVU_v3_Product_Specification.docx  README.md  experiment_log.txt  kalavai_phase2_experiments.md  kalavu-v3-product-flow.jsx  kalavu_pythia_1b_experiment.py  kalavu_pythia_5domain_experiment.py  kalavu_pythia_6b_experiment.py  kalavu_pythia_experiment.py  kalavu_pythia_loss_curves.py  kalavu_pythia_maturity_sweep.py  kalavu_qwen_divergent_domains.py  kalavu_qwen_experiment.py  kalavu_qwen_experiment_5domain.py  kalavu_results_audit.py  kalavu_run_all.py  pyproject.toml  sweep_log.txt  wrangler.toml
.claude/: settings.local.json
docs/: checkpoint.md  index.html  status.md  tasks.md
experiments/: figure_style.py  kalavai_18contributor_experiment.py  kalavai_1b_5domain_experiment.py  kalavai_1b_monolithic_baseline.py  kalavai_20contributor_base_hidden.py  kalavai_20contributor_base_hidden_v2.py  kalavai_20contributor_experiment.py  kalavai_6b_step_sweep.py  kalavai_ablations_v2.py  kalavai_crossover_regression_points.py  kalavai_domain_classifier_baseline.py  kalavai_experiment.py  kalavai_generate_summary_figures.py  kalavai_hard_routing_verification.py  kalavai_held_out_validation.py  kalavai_hero_figure.py  kalavai_heterogeneous_cooperative.py  kalavai_hybrid_domain_routing.py  kalavai_inference_benchmark.py  kalavai_lora_figure.py  kalavai_multihead_baseline.py  kalavai_mutual_information.py  kalavai_phase2_exp1.py  kalavai_phase2_exp1_curriculum.py  kalavai_pythia_1b_benchmarks.py  kalavai_pythia_1b_experiment.py  (+48 more)
logs/: c1_log.txt  (+5 more)
(+198 files in other folders)
